--- a/render.yaml
+++ b/render.yaml
@@ -4,5 +4,21 @@ services:
     env: docker
     plan: free
     region: oregon
-    autoDeploy: true
-    healthCheckPath: /
+    dockerfilePath: ./Dockerfile
+    envVars:
+      - key: N8N_BASIC_AUTH_ACTIVE
+        value: "true"
+      - key: N8N_BASIC_AUTH_USER
+        value: "admin"
+      - key: N8N_BASIC_AUTH_PASSWORD
+        value: "ChangeThisPassword123!"
+      - key: N8N_ENCRYPTION_KEY
+        generateValue: true
+      - key: N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS
+        value: "true"
+      - key: N8N_SECURE_COOKIE
+        value: "true"
+      - key: N8N_PORT
+        value: "5678"
+      - key: NGROK_AUTHTOKEN
+        sync: false   # Set this in Render dashboard → Environment (hidden)
